mesa (7.10-3) UNRELEASED; urgency=low

  * Cherry-pick from upstream (thanks to Dave Airlie for the hint):
    - radeon: fix build on non-KMS systems.

 -- Cyril Brulebois <kibi@debian.org>  Tue, 08 Feb 2011 13:18:38 +0100

mesa (7.10-2) unstable; urgency=low

  * Fix FTBFS on i386: Add some files to debian/not-installed, on a
    per-architecture fashion (those are under /usr/lib/i686/cmov/).
  * Work around FTBFS on sparc due to new symbols: pass -c1 to
    dpkg-gensymbols instead of -c4 (on sparc only). Those symbols probably
    shouldn't be exported, but let's make it possible to build xorg-server
    1.9 in sid.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 05 Feb 2011 11:16:26 +0100

mesa (7.10-1) experimental; urgency=low

  * New upstream release.
  * Add patch: 10-fix-talloc-linking.diff
  * Use debian/not-installed to keep track of files which aren't getting
    installed for now. Delete them before running dh_install. Use the list
    of files appearing in the build logs for 7.9+repack-2.
  * Switch from --list-missing to --fail-missing accordingly.
  * Pass -c4 to dpkg-gensymbols through dh_makeshlibs to make sure
    symbol-related changes are noticed and dealt with.
  * Update symbols files with new symbols:
    - libopenvg1-mesa.symbols
  * Remove “mesa internal ASM optimized functions” lines from symbols
    files, those seem to be gone, and with -c4 passed to dpkg-gensymbols,
    any related issue will break the build:
    - libgles1-mesa.symbols
    - libgles2-mesa.symbols
  * Stop using dh_strip -s --remaining-packages. When a build is resumed
    (-nc), this dh_strip call is a no-op if it was previously written to
    the debhelper log files. Specify all remaining packages instead.
    That's boring, but avoid getting non-stripped packages.
  * Add debian/git-cleanup.sh script to ease removing files in git which
    aren't in the release tarballs, and make dpkg-source error out.
  * Keep my eyes wide shut and add myself to Uploaders.
